--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-bootstrap-icons": "^1.6.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
