--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.0",
     "bootstrap": "^5.1.3",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-bootstrap-icons": "^1.6.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "eslint": "8.4.1",
