--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.0",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "next": "12.0.7",
     "react": "17.0.2",
